--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "framer-motion": "^10.11.5",
     "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^18.2.0",
     "react-lazy-load-component": "^1.0.9",
     "react-lazy-load-image-component": "^1.5.6",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "react-scroll-into-view": "^1.12.1"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-lazy-load-image-component": "^1.5.2",
