--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+public/ProjectPage/OguduForeshore/file.mp4
+public/ProjectPage/OguduForeshore/file3.mp4
 node_modules
 dist
 dist-ssr
