--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react-lazy-load-component": "^1.0.9",
     "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.10.0",
-    "react-scroll-into-view": "^1.12.1"
+    "react-scroll-into-view": "^1.12.1",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/video-react": "^0.15.1",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
